fix: scrollbar styling

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -13,11 +13,17 @@
 
 ::-webkit-scrollbar-track {
   background: #23262f;
+  box-shadow: inset 0 0 5px gray;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: black;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #121214;
   border: 3px solid #23262f;
+  border-radius: 12px;
 }
 body {
   color: "black" !important;
